--- a/docs/api/orders/checkout-totals.api.mdx
+++ b/docs/api/orders/checkout-totals.api.mdx
@@ -1,16 +1,13 @@
 ---
 id: checkout-totals
-title: Checkout Totals
-description: "Generates information for the checkout page including taxes, totals, and shipping price.
-      This endpoint will return up-to-date price and inventory information. If the price changed,
-      the user should be notified about the price change. If the inventory is not sufficient to"
-sidebar_label: Checkout Totals
+title: "Checkout Totals"
+description: "Generates information for the checkout page including taxes, totals, and shipping price."
+sidebar_label: "Checkout Totals"
 hide_title: true
 hide_table_of_contents: true
-api: {"tags":["Checkouts"],"requestBody":{"content":{"application/json":{"schema":{"type":"object","required":["products"],"properties":{"shipping_address":{"type":"object","required":["first_name","last_name","address1","city","country","zip"],"properties":{"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"},"address1":{"type":"string","description":"The street address of the shipping address.","example":"123 Amoebobacterieae St"},"address2":{"type":"string","nullable":true,"description":"An optional additional field for the street address of the shipping address.","example":"Unit 718"},"city":{"type":"string","description":"The city, town, or village of the shipping address.","example":"Ottawa"},"country":{"type":"string","description":"The two-letter code (ISO 3166-1 format) for the country of the shipping address.","example":"CA"},"name":{"type":"string","description":"Full name.","example":"Bob Bobsen"},"province":{"type":"string","nullable":true,"description":"The two-letter abbreviation of the region of the shipping address.","example":"ON"},"phone":{"type":"string","description":"The phone number at the shipping address.","example":"555-625-1199"},"zip":{"type":"string","description":"The postal code (zip, postcode, Eircode, …) of the shipping address.","example":"K2P0V6"}}},"products":{"type":"array","minItems":1,"items":{"type":"object","required":["public_id","variant_id","quantity"],"properties":{"public_id":{"type":"string","description":"Public ID of the product","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234 - M - Black"},"price":{"type":"number","format":"float","description":"Price for specific product.","example":12},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant in the cart","example":2}}}},"customer_id":{"type":"string","description":"Customer ID","example":"49d00c40-0e51-4726-b189-edcb3be6148d"},"gift_code_id":{"type":"string","description":"ID of gift code to apply","example":"5d77a686230f7618875ac9fa"},"target_currency":{"type":"string","description":"Currency to return values in","example":"CAD"}}}}},"required":true},"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","required":["subtotal","tax","shipping","total","line_items","currency","shipping_total"],"properties":{"subtotal":{"type":"number","format":"float","minimum":0,"description":"The price of all products in the cart, in dollars.","example":12.5},"tax":{"type":"number","format":"float","minimum":0,"description":"The amount of taxes to be paid, in dollars.","example":1.63},"shipping":{"type":"array","items":{"type":"object","required":["amount","label","code"],"properties":{"amount":{"type":"number","format":"float","minimum":0,"description":"The amount of shipping services to be paid, in dollars.","example":15},"label":{"type":"string","description":"Label to show to the user to indicate the shipping type.","example":"Standard Flat Rate Shipping"},"code":{"type":"number","format":"float","description":"Code that indicates the shipping type.","example":1},"merchant_name":{"type":"string","description":"Merchant name.","example":"Virgin Club"}}}},"total":{"type":"number","format":"float","minimum":0,"description":"The total amount for the order, in dollars.","example":12.25},"duties":{"type":"number","format":"float","minimum":0,"description":"The total amount of duties for the order, in dollars.","example":12.25},"line_items":{"type":"array","items":{"type":"object","required":["public_id","variant_id","inventory","price","quantity","name"],"properties":{"public_id":{"type":"string","description":"Public ID of the product.","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234-M-Black"},"inventory":{"type":"number","format":"float","minimum":0,"description":"Available inventory.","example":5},"price":{"type":"number","format":"float","minimum":0,"description":"Product price, in dollars.","example":12.5},"quantity":{"type":"number","format":"float","minimum":1,"description":"Purchase quantity requested from the endpoint","example":2},"name":{"type":"string","description":"Product name","example":"Virgin club hoodie"}}}},"currency":{"type":"string","description":"Currency that values are returned in.","example":"USD"},"shipping_total":{"type":"number","format":"float","minimum":0,"description":"Total amount of shipping costs.","example":120.2},"gift_code":{"type":"object","properties":{"amount":{"type":"number","format":"float","description":"Amount for gift code.","example":12.25},"label":{"type":"string","description":"Label for specific gift code.","example":"NEWYEAR"}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"data":{"type":"object","properties":{"line_items":{"type":"array","items":{"type":"object","required":["public_id","variant_id","inventory","price","quantity","name"],"properties":{"public_id":{"type":"string","description":"Public ID of the product.","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234-M-Black"},"inventory":{"type":"number","format":"float","minimum":0,"description":"Available inventory.","example":5},"price":{"type":"number","format":"float","minimum":0,"description":"Product price, in dollars.","example":12.5},"quantity":{"type":"number","format":"float","minimum":1,"description":"Purchase quantity requested from the endpoint","example":2},"name":{"type":"string","description":"Product name","example":"Virgin club hoodie"}}}}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","meta"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occured trying to create a new order"},"meta":{"description":"Actual error containing stack trace and other properties.","example":"{ stack: ... }"}}}}}}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"405":{"description":"405 - Validation exception"},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Generates information for the checkout page including taxes, totals, and shipping price.\n      This endpoint will return up-to-date price and inventory information. If the price changed,\n      the user should be notified about the price change. If the inventory is not sufficient to","method":"post","path":"/checkout","servers":[{"url":"//api.shopbonsai.ca/orders"}],"jsonRequestBodyExample":{"shipping_address":{"first_name":"Bob","last_name":"Bobsen","address1":"123 Amoebobacterieae St","address2":"Unit 718","city":"Ottawa","country":"CA","name":"Bob Bobsen","province":"ON","phone":"555-625-1199","zip":"K2P0V6"},"products":[{"public_id":"cjld2cyuq0000t3rmniod1foy","variant_id":"1234 - M - Black","price":12,"quantity":2}],"customer_id":"49d00c40-0e51-4726-b189-edcb3be6148d","gift_code_id":"5d77a686230f7618875ac9fa","target_currency":"CAD"},"info":{"title":"Orders API","description":"Defines the APIs that are accessed by External Stores","version":"1.21.41","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Checkout Totals","description":{"content":"Generates information for the checkout page including taxes, totals, and shipping price.\n      This endpoint will return up-to-date price and inventory information. If the price changed,\n      the user should be notified about the price change. If the inventory is not sufficient to","type":"text/plain"},"url":{"path":["checkout"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
+api: {"tags":["Checkouts"],"requestBody":{"content":{"application/json":{"schema":{"type":"object","required":["products"],"properties":{"shipping_address":{"type":"object","required":["first_name","last_name","address1","city","country","zip"],"properties":{"first_name":{"type":"string","description":"Customer first name.","example":"Bob"},"last_name":{"type":"string","description":"Customer last name.","example":"Bobsen"},"address1":{"type":"string","description":"The street address of the shipping address.","example":"123 Amoebobacterieae St"},"address2":{"type":"string","nullable":true,"description":"An optional additional field for the street address of the shipping address.","example":"Unit 718"},"city":{"type":"string","description":"The city, town, or village of the shipping address.","example":"Ottawa"},"country":{"type":"string","description":"The two-letter code (ISO 3166-1 format) for the country of the shipping address.","example":"CA"},"name":{"type":"string","description":"Full name.","example":"Bob Bobsen"},"province":{"type":"string","nullable":true,"description":"The two-letter abbreviation of the region of the shipping address.","example":"ON"},"phone":{"type":"string","description":"The phone number at the shipping address.","example":"555-625-1199"},"zip":{"type":"string","description":"The postal code (zip, postcode, Eircode, …) of the shipping address.","example":"K2P0V6"}}},"products":{"type":"array","minItems":1,"items":{"type":"object","required":["public_id","variant_id","quantity"],"properties":{"public_id":{"type":"string","description":"Public ID of the product","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234 - M - Black"},"price":{"type":"number","format":"float","description":"Price for specific product.","example":12},"quantity":{"type":"number","format":"float","minimum":1,"description":"Quantity of the product variant in the cart","example":2}}}},"customer_id":{"type":"string","description":"Customer ID","example":"49d00c40-0e51-4726-b189-edcb3be6148d"},"gift_code_id":{"type":"string","description":"ID of gift code to apply","example":"5d77a686230f7618875ac9fa"},"target_currency":{"type":"string","description":"Currency to return values in","example":"CAD"}}}}},"required":true},"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"properties":{"data":{"type":"object","required":["subtotal","tax","shipping","total","line_items","currency","shipping_total"],"properties":{"subtotal":{"type":"number","format":"float","minimum":0,"description":"The price of all products in the cart, in dollars.","example":12.5},"tax":{"type":"number","format":"float","minimum":0,"description":"The amount of taxes to be paid, in dollars.","example":1.63},"shipping":{"type":"array","items":{"type":"object","required":["amount","label","code"],"properties":{"amount":{"type":"number","format":"float","minimum":0,"description":"The amount of shipping services to be paid, in dollars.","example":15},"label":{"type":"string","description":"Label to show to the user to indicate the shipping type.","example":"Standard Flat Rate Shipping"},"code":{"type":"number","format":"float","description":"Code that indicates the shipping type.","example":1},"merchant_name":{"type":"string","description":"Merchant name.","example":"Virgin Club"}}}},"total":{"type":"number","format":"float","minimum":0,"description":"The total amount for the order, in dollars.","example":12.25},"duties":{"type":"number","format":"float","minimum":0,"description":"The total amount of duties for the order, in dollars.","example":12.25},"line_items":{"type":"array","items":{"type":"object","required":["public_id","variant_id","inventory","price","quantity","name"],"properties":{"public_id":{"type":"string","description":"Public ID of the product.","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234-M-Black"},"inventory":{"type":"number","format":"float","minimum":0,"description":"Available inventory.","example":5},"price":{"type":"number","format":"float","minimum":0,"description":"Product price, in dollars.","example":12.5},"quantity":{"type":"number","format":"float","minimum":1,"description":"Purchase quantity requested from the endpoint","example":2},"name":{"type":"string","description":"Product name","example":"Virgin club hoodie"}}}},"currency":{"type":"string","description":"Currency that values are returned in.","example":"USD"},"shipping_total":{"type":"number","format":"float","minimum":0,"description":"Total amount of shipping costs.","example":120.2},"gift_code":{"type":"object","properties":{"amount":{"type":"number","format":"float","description":"Amount for gift code.","example":12.25},"label":{"type":"string","description":"Label for specific gift code.","example":"NEWYEAR"}}}}}},"type":"object"}}}},"400":{"description":"400 - Bad request","content":{"application/json":{"schema":{"type":"object","properties":{"data":{"type":"object","properties":{"line_items":{"type":"array","items":{"type":"object","required":["public_id","variant_id","inventory","price","quantity","name"],"properties":{"public_id":{"type":"string","description":"Public ID of the product.","example":"cjld2cyuq0000t3rmniod1foy"},"variant_id":{"type":"string","description":"The ID of the product variant.","example":"1234-M-Black"},"inventory":{"type":"number","format":"float","minimum":0,"description":"Available inventory.","example":5},"price":{"type":"number","format":"float","minimum":0,"description":"Product price, in dollars.","example":12.5},"quantity":{"type":"number","format":"float","minimum":1,"description":"Purchase quantity requested from the endpoint","example":2},"name":{"type":"string","description":"Product name","example":"Virgin club hoodie"}}}}}},"errors":{"type":"array","items":{"type":"object","required":["id","status","code","title","meta"],"properties":{"id":{"type":"string","description":"Unique identifier for error. Can be used for tracing across services.","example":"123e4567-e89b-12d3-a456-426655440000"},"status":{"type":"number","format":"float","description":"HTTP status code.","example":400},"code":{"type":"string","description":"Unique code for specific error.","example":"USER_NOT_FOUND"},"title":{"type":"string","description":"Short description what the error entails.","example":"Error occured trying to create a new order"},"meta":{"description":"Actual error containing stack trace and other properties.","example":"{ stack: ... }"}}}}}}}}},"401":{"description":"401 - Unauthorized","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":401,"detail":"","title":"Authentication information is missing or invalid"}}}},"description":"Authentication information is missing or invalid"}}}},"404":{"description":"404 - Not found","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":404,"detail":"","title":"Not Found"}}}},"description":"Not Found"}}}},"405":{"description":"405 - Validation exception"},"5XX":{"description":"500 - Unknown error","content":{"application/json":{"schema":{"type":"object","properties":{"errors":{"type":"array","items":{"type":"object","required":["status","detail","title"],"properties":{"status":{"type":"number","format":"float","example":500},"detail":{"type":"string","nullable":true,"example":"Fatal issue"},"title":{"type":"string","example":"Unknown error"}},"example":{"status":500,"detail":"","title":"Unknown error"}}}},"description":"Unknown error"}}}}},"description":"Generates information for the checkout page including taxes, totals, and shipping price.\n      This endpoint will return up-to-date price and inventory information. If the price changed,\n      the user should be notified about the price change. If the inventory is not sufficient to","method":"post","path":"/checkout","servers":[{"url":"https://api.shopbonsai.ca/orders"}],"jsonRequestBodyExample":{"shipping_address":{"first_name":"Bob","last_name":"Bobsen","address1":"123 Amoebobacterieae St","address2":"Unit 718","city":"Ottawa","country":"CA","name":"Bob Bobsen","province":"ON","phone":"555-625-1199","zip":"K2P0V6"},"products":[{"public_id":"cjld2cyuq0000t3rmniod1foy","variant_id":"1234 - M - Black","price":12,"quantity":2}],"customer_id":"49d00c40-0e51-4726-b189-edcb3be6148d","gift_code_id":"5d77a686230f7618875ac9fa","target_currency":"CAD"},"info":{"title":"Orders API","description":"Defines the APIs that are accessed by External Stores","version":"1.21.41","contact":{"email":"developers@shopbonsai.ca"}},"postman":{"name":"Checkout Totals","description":{"content":"Generates information for the checkout page including taxes, totals, and shipping price.\n      This endpoint will return up-to-date price and inventory information. If the price changed,\n      the user should be notified about the price change. If the inventory is not sufficient to","type":"text/plain"},"url":{"path":["checkout"],"host":["{{baseUrl}}"],"query":[],"variable":[]},"header":[{"key":"Content-Type","value":"application/json"},{"key":"Accept","value":"application/json"}],"method":"POST","body":{"mode":"raw","raw":"\"\"","options":{"raw":{"language":"json"}}}}}
 sidebar_class_name: "post api-method"
 info_path: docs/api/orders/orders-api
-custom_edit_url: "https://github.com/ShopBonsai/docs/issues/new?labels=documentation&title=[Documentation] Requesting changes to 'Checkout Totals' (checkout-totals)"
 ---
 
 import ApiTabs from "@theme/ApiTabs";
@@ -59,3 +56,4 @@ Success
 500 - Unknown error
 
 </div><div><MimeTabs schemaType={"response"}><TabItem label={"application/json"} value={"application/json"}><SchemaTabs><TabItem label={"Schema"} value={"Schema"}><details style={{}} data-collapsed={false} open={true}><summary style={{"textAlign":"left"}}><strong>Schema</strong></summary><div style={{"textAlign":"left","marginLeft":"1rem"}}></div><ul style={{"marginLeft":"1rem"}}><SchemaItem collapsible={true} className={"schemaItem"}><details style={{}}><summary style={{}}><strong>errors</strong><span style={{"opacity":"0.6"}}> object[]</span></summary><div style={{"marginLeft":"1rem"}}><SchemaItem collapsible={false} name={"status"} required={false} schemaDescription={undefined} schemaName={"float"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"detail"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem><SchemaItem collapsible={false} name={"title"} required={false} schemaDescription={undefined} schemaName={"string"} qualifierMessage={undefined} defaultValue={undefined}></SchemaItem></div></details></SchemaItem></ul></details></TabItem><TabItem label={"Example (from schema)"} value={"Example (from schema)"}><ResponseSamples responseExample={"{\n  \"errors\": [\n    {\n      \"status\": 500,\n      \"detail\": \"\",\n      \"title\": \"Unknown error\"\n    }\n  ]\n}"} language={"json"}></ResponseSamples></TabItem></SchemaTabs></TabItem></MimeTabs></div></TabItem></ApiTabs></div>
+      
