--- a/docs/api/orders/orders-api.info.mdx
+++ b/docs/api/orders/orders-api.info.mdx
@@ -1,7 +1,7 @@
 ---
 id: orders-api
 title: "Orders API"
-description: "Defines the APIs that are accessed by External Stores"
+description: "APIs used for interacting with orders."
 sidebar_label: "Orders API"
 hide_title: true
 custom_edit_url: null
@@ -20,7 +20,7 @@ import Export from "@theme/ApiDemoPanel/Export";
 
 
 
-Defines the APIs that are accessed by External Stores
+APIs used for interacting with orders.
 
 <div style={{"marginBottom":"2rem"}}><h2 id={"authentication"} style={{"marginBottom":"1rem"}}>Authentication</h2><Tabs><TabItem label={"API Key"} value={"APIKeyHeader"}><div><table><tbody><tr><th>Security Scheme Type:</th><td>apiKey</td></tr><tr><th>Header parameter name:</th><td>API-Key</td></tr></tbody></table></div></TabItem></Tabs></div><div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
 
