--- a/docs/api/products/products-api.info.mdx
+++ b/docs/api/products/products-api.info.mdx
@@ -1,8 +1,8 @@
 ---
-id: public-product-api
-title: "Public Product API"
-description: "APIs that can be accessed by platforms"
-sidebar_label: "Public Product API"
+id: products-api
+title: "Products API"
+description: "APIs used for fetching product information."
+sidebar_label: "Products API"
 hide_title: true
 custom_edit_url: null
 ---
@@ -16,11 +16,11 @@ import Export from "@theme/ApiDemoPanel/Export";
 
 <Export url={"https://raw.githubusercontent.com/ShopBonsai/docs/main/spec/products.json"} proxy={undefined}></Export>
 
-# Public Product API
+# Products API
 
 
 
-APIs that can be accessed by platforms
+APIs used for fetching product information.
 
 <div style={{"marginBottom":"2rem"}}><h2 id={"authentication"} style={{"marginBottom":"1rem"}}>Authentication</h2><Tabs><TabItem label={"API Key"} value={"APIKeyHeader"}><div><table><tbody><tr><th>Security Scheme Type:</th><td>apiKey</td></tr><tr><th>Header parameter name:</th><td>API-Key</td></tr></tbody></table></div></TabItem></Tabs></div><div style={{"display":"flex","flexDirection":"column","marginBottom":"var(--ifm-paragraph-margin-bottom)"}}><h3 style={{"marginBottom":"0.25rem"}}>Contact</h3><span><a href={"mailto:developers@shopbonsai.ca"}>developers@shopbonsai.ca</a></span></div>
 
